--- a/cpji-jira-plugin/src/main/resources/templates/admin.vm
+++ b/cpji-jira-plugin/src/main/resources/templates/admin.vm
@@ -1,35 +1,31 @@
 <html>
 <head>
     <meta name='decorator' content='atl.admin'>
+    <title>Configure Remote Copy Plugin</title>
 </head>
 <body class="nl">
  <form action="ConfigureCopyIssuesAdminAction!savePermission.jspa" method="post" class="aui">
      <div class="content-body">
+        #if ($action.hasConfigChanges())
+        <div class="aui-message success"><span class="aui-icon icon-success"></span>
+           <ul>
+                #foreach( $change in $action.getConfigChanges() )
+                  <li>$change</li>
+                #end
+            </ul>
+       </div>
+       #end
+       #if ($action.invalidInput())
+       <div class="aui-message warning"><span class="aui-icon icon-warning"></span>
+             <p>There were some problems when saving the configuration.</p>
+             <ul>
+                #foreach( $error in $action.getErrorMessages() )
+                  <li>$error</li>
+                #end
+             </ul>
+       </div>
+       #end
      <h2>General Configuration</h2>
-         <div class="field-group">
-             <label for"group">User group</label>
-             <select class="select" name="group" id="group">
-                <option value=""  #if($action.getSelectedGroup() == "") selected="" #end>everyone</option>
-                #foreach( $group in $action.getGroups() )
-                   <option value="$group.getName()"  #if($action.getSelectedGroup() == $group.getName()) selected="" #end>$group.getName()</option>
-                #end
-             </select>
-             <div class="description">
-                 Only users of this group can copy to another JIRA project.
-             </div>
-         </div>
-         <div class="field-group">
-             <label for"commentSecurityLevel">Comment security</label>
-             <select class="select" name="commentSecurityLevel" id="commentSecurityLevel">
-                <option value=""  #if(!$action.getSelectedSecurityLevel()) selected="" #end>none</option>
-                #foreach( $securityLevel in $action.getSecurityLevels() )
-                   <option value="$securityLevel.getType()#$securityLevel.getId()"  #if($action.getSelectedSecurityLevel() && $action.getSelectedSecurityLevel().getId() == $securityLevel.getId() && $action.getSelectedSecurityLevel().getType() == $securityLevel.getType()) selected="" #end>$securityLevel.getLabel()</option>
-                #end
-             </select>
-             <div class="description">
-                 After copying the issue the plugin will add a comment with a link to the remote issue and apply this security level to the comment.
-             </div>
-         </div>
          <div class="field-group">
              <label for"userMapping">User Mapping</label>
              <select class="select" name="userMapping" id="userMapping">
@@ -78,9 +74,9 @@
 
 <form action="ConfigureCopyIssuesAdminAction!save.jspa" method="post" class="aui">
     <div class="content-body">
-        <h2>Fields</h2>
+        <h2>Required fields for Issue Type $action.getSelectedIssueTypeName()</h2>
         <p>
-            Select default values for issue type $action.getSelectedIssueTypeName()
+            Specify default values for these required fields.
         </p>
         #foreach( $item in $action.getFieldLayoutItems())
           $action.getHtmlForField($item)
