CPJI-21: UI Improvements to configuration UI - Atlassian Labs. Minor renaming.

--- a/cpji-jira-plugin/src/main/resources/templates/admin.vm
+++ b/cpji-jira-plugin/src/main/resources/templates/admin.vm
@@ -52,7 +52,7 @@
          <input type="hidden" name="projectKey" value="$action.getProjectKey()"/>
          <div class="buttons-container">
              <div class="buttons">
-                <input class="button" type="submit" value="save"/>
+                <input class="button" type="submit" value="Update"/>
              </div>
          </div>
      </div>
