--- a/cpji-jira-plugin/src/main/resources/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/templates/selectproject.vm
@@ -1,4 +1,7 @@
 <html>
+<head>
+    <title>Select a target remote project</title>
+</head>
 <body>
 <div id="stepped-process" class="content-container">
     <div class="content-related">
