--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -16,20 +16,20 @@
         <form action="SelectTargetProjectAction.jspa" class="aui" method="post">
             <h2>Select project</h2>
             <fieldset>
-                <div class="field-group">
-                    <label for="targetEntityLink">Project</label>
-                    <select name="targetEntityLink" id="targetEntityLink">
-                        #foreach( $entityLink in $action.getLinkedJiraProjects() )
-                            <option value="$entityLink.getApplicationLink().getId()%7C$entityLink.getKey()">($entityLink.getApplicationLink().getName())  $entityLink.getName() ($entityLink.getKey())</option>
-                        #end
-                    </select>
-                </div>
+##                <div class="field-group">
+##                    <label for="targetEntityLink">Project</label>
+##                    <select name="targetEntityLink" id="targetEntityLink">
+##                        #foreach( $entityLink in $action.getLinkedJiraProjects() )
+##                            <option value="$entityLink.getApplicationLink().getId()%7C$entityLink.getKey()">($entityLink.getApplicationLink().getName())  $entityLink.getName() ($entityLink.getKey())</option>
+##                        #end
+##                    </select>
+##                </div>
 
 				<div class="field-group">
 					<label for="targetEntityLink">$i18n.getText('cpji.select.destination.project')</label>
-					<select name="targetEntityLink" id="destinationProject">
+					<select name="targetEntityLink" id="targetEntityLink">
 						#foreach( $destinationProject in $action.getAvailableDestinationProjects() )
-							<option value="$destinationProject.key">$destinationProject.value</option>
+							<option value="$textutils.htmlEncode($destinationProject.key)">$destinationProject.value</option>
 						#end
 					</select>
 				</div>
