--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -14,19 +14,10 @@
     </div>
     <div class="content-body aui-panel">
         <form action="SelectTargetProjectAction.jspa" class="aui" method="post">
-            <h2>Select project</h2>
+            <h2>$i18n.getText('cpji.select.destination.project')</h2>
             <fieldset>
-##                <div class="field-group">
-##                    <label for="targetEntityLink">Project</label>
-##                    <select name="targetEntityLink" id="targetEntityLink">
-##                        #foreach( $entityLink in $action.getLinkedJiraProjects() )
-##                            <option value="$entityLink.getApplicationLink().getId()%7C$entityLink.getKey()">($entityLink.getApplicationLink().getName())  $entityLink.getName() ($entityLink.getKey())</option>
-##                        #end
-##                    </select>
-##                </div>
-
 				<div class="field-group">
-					<label for="targetEntityLink">$i18n.getText('cpji.select.destination.project')</label>
+					<label for="targetEntityLink">$i18n.getText('common.words.project')</label>
 					<select name="targetEntityLink" id="targetEntityLink">
 						#foreach( $destinationProject in $action.getAvailableDestinationProjects() )
 							<option value="$textutils.htmlEncode($destinationProject.key)">$destinationProject.value</option>
