--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -23,7 +23,7 @@
 ##							<option value="$textutils.htmlEncode($destinationProject.key)">$destinationProject.value</option>
 ##						#end
 					</select>
-                    <div id="targetEntityLinkLoader" style="display: hidden;">$i18n.getText('common.concepts.loading')</div>
+                    <span id="targetEntityLinkLoader" class="icon loading hidden"></span>
 				</div>
             </fieldset>
             <div class="button-container">
