--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/selectproject.vm
@@ -15,7 +15,6 @@
     <div class="content-body aui-panel">
         <form action="SelectTargetProjectAction.jspa" class="aui" method="post">
             <h2>$i18n.getText('cpji.select.destination.project')</h2>
-            <div id="aui-message-bar"></div>
             <fieldset>
 				<div class="field-group">
 					<label for="targetEntityLink">$i18n.getText('common.words.project')</label>
@@ -25,7 +24,7 @@
             </fieldset>
             <div class="button-container">
                 <div class="buttons">
-                    <input type="submit" value="Next" class="button submit"/>
+                    <input id="select-project-submit" type="submit" value="Next" class="button submit"/>
                 </div>
             </div>
             <input type="hidden" name="id" value="$action.getId()"/>
