JRADEV-16147 Additional markup consistent with PDL

--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/adminoperation.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/adminoperation.vm
@@ -1,2 +1,5 @@
-<span class="project-config-list-label">$i18n.getText('cpji.admin.general.name')</span>
-<a href="$req.contextPath/secure/ConfigureCopyIssuesAdminAction.jspa?projectKey=$projectKey" id="configure_cpji">$i18n.getText('common.words.configure')</a>
+<span class="project-config-list-label">$i18n.getText('cpji.admin.general.name'):</span>
+<span class="project-config-list-value">
+    <a href="$req.contextPath/secure/ConfigureCopyIssuesAdminAction.jspa?projectKey=$projectKey" id="configure_cpji">$i18n.getText('common.words.configure')</a>
+</span>
+
