--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/admin.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/admin.vm
@@ -1,87 +1,73 @@
-<html>
-<head>
-    <meta name='decorator' content='atl.admin'>
-    <title>Configure Remote Copy Plugin</title>
-</head>
-<body class="nl">
- <form action="ConfigureCopyIssuesAdminAction!savePermission.jspa" method="post" class="aui">
-     <div class="content-body">
-        #if ($action.hasConfigChanges())
-        <div class="aui-message success">
-           <ul>
-                #foreach( $change in $action.getConfigChanges() )
-                  <li>$change</li>
+#* @vtlvariable name="action" type="com.atlassian.cpji.action.admin.ConfigureCopyIssuesAdminAction" *#
+<form action="ConfigureCopyIssuesAdminAction.jspa" method="post" class="aui">
+    <h2>$i18n.getText("cpji.admin.title")</h2>
+    <div class="form-body">
+        #if ($action.getExecuteFired() && !$action.invalidInput())
+            <div class="aui-message success">
+                <p>$i18n.getText("cpji.admin.successful.saved")</p>
+                #if ($action.hasConfigChanges())
+                <ul>
+                    #foreach( $change in $action.getConfigChanges() )
+                        <li>$change</li>
+                    #end
+                </ul>
                 #end
-            </ul>
-       </div>
-       #end
-       #if ($action.invalidInput())
-       <div class="aui-message warning">
-             <p>There were some problems when saving the configuration.</p>
-             <ul>
-                #foreach( $error in $action.getErrorMessages() )
-                  <li>$error</li>
-                #end
-             </ul>
-       </div>
-       #end
-     <h2>General Configuration</h2>
-         <div class="field-group">
-             <label for"group">User group</label>
-             <select class="select" name="group" id="group">
-                <option value=""  #if($action.getSelectedGroup() == "") selected="" #end>everyone</option>
+            </div>
+        #end
+        #if ($action.invalidInput())
+            <div class="aui-message warning">
+                <p>$i18n.getText("cpji.admin.there.were.problems")</p>
+                <ul>
+                    #foreach( $error in $action.getErrorMessages() )
+                        <li>$error</li>
+                    #end
+                </ul>
+            </div>
+        #end
+
+        <div class="field-group">
+            <label for="group">$i18n.getText("cpji.admin.fields.group.name")</label>
+            <select class="select" name="group" id="group">
+                <option value=""  #if($action.getSelectedGroup() == "")
+                        selected="" #end>$i18n.getText("cpji.admin.fields.group.everyone")</option>
                 #foreach( $group in $action.getGroups() )
-                   <option value="$group.getName()"  #if($action.getSelectedGroup() == $group.getName()) selected="" #end>$group.getName()</option>
+                    <option value="$group.getName()"  #if($action.getSelectedGroup() == $group.getName())
+                            selected="" #end>$group.getName()</option>
                 #end
-             </select>
-             <div class="description">
-                 Only users of this group can copy to another JIRA project.
-             </div>
-         </div>
-         <div class="field-group">
-             <label for"userMapping">User Mapping</label>
-             <select class="select" name="userMapping" id="userMapping">
+            </select>
+            <div class="description">$i18n.getText("cpji.admin.fields.group.description")</div>
+
+            <label for"userMapping">$i18n.getText("cpji.admin.fields.usermapping.name")</label>
+            <select class="select" name="userMapping" id="userMapping">
                 #foreach( $userMapping in $action.getUserMappingTypes() )
-                   <option value="$userMapping"  #if($action.getConfiguredUserMapping() == $userMapping) selected="" #end>$i18n.getText($userMapping.getI18nKey())</option>
+                    <option value="$userMapping"  #if($action.getConfiguredUserMapping() == $userMapping)
+                            selected="" #end>$i18n.getText($userMapping.getI18nKey())</option>
                 #end
-             </select>
-             <div class="description">
-               Users from the remote JIRA instance are mapped by using the selected mapping type. This user mapping is used when copying field values of the assignee, comment, reporter, voter and watcher field.
-             </div>
-         </div>
-         <input type="hidden" name="projectKey" value="$action.getProjectKey()"/>
-         <div class="buttons-container">
-             <div class="buttons">
-                <input class="button" type="submit" value="Update"/>
-             </div>
-         </div>
-     </div>
- </form>
+            </select>
+            <div class="description">$i18n.getText("cpji.admin.fields.usermapping.description")</div>
+        </div>
 
- <form action="ConfigureCopyIssuesAdminAction!save.jspa" method="post" class="aui">
-     <div class="content-body" id="required-fields">
-     <h2>Default values for required fields</h2>
-     <p>
-       These default values will be applied if the remote issue does not contain a value.
-     </p>
-     <div class="field-group">
-         <label for"selectedIssueTypeId">Issue Type</label>
-         <select class="select" name="selectedIssueTypeId" id="select-issue-type">
-            #foreach( $issueType in $action.getIssueTypesForProject() )
-               <option value="$issueType.getId()"  #if($action.getSelectedIssueTypeId() == $issueType.getId()) selected="" #end>$issueType.getName()</option>
-            #end
-         </select><span class="cpji-loading"></span>
-     </div>
-     <input type="hidden" id="project-key" name="projectKey" name value="$action.getProjectKey()"/>
-     <div id="fields">
+        <p>$i18n.getText("cpji.admin.default.values")</p>
+        <div class="field-group">
 
-     </div>
-     <div class="buttons-container">
-         <div class="buttons">
-            <input class="button" type="submit" value="Update"/>
-         </div>
-     </div>
-     </div>
- </form>
-</body>
-</html>
+            <label for"selectedIssueTypeId">$i18n.getText("issue.field.issuetype")</label>
+            <select class="select" name="selectedIssueTypeId" id="select-issue-type">
+                #foreach( $issueType in $action.getIssueTypesForProject() )
+                    <option value="$issueType.getId()"  #if($action.getSelectedIssueTypeId() == $issueType.getId())
+                            selected="" #end>$issueType.getName()</option>
+                #end
+            </select><span class="cpji-loading"></span>
+        </div>
+        <div id="fields"></div>
+
+        <input type="hidden" id="project-key" name="projectKey" name value="$action.getProjectKey()"/>
+
+    </div>
+
+    <div class="buttons-container form-footer">
+        <div class="buttons">
+            <input class="button submit" type="submit" value="$i18n.getText("common.words.update")"/>
+            <a href="#" class="cancel">$i18n.getText("admin.common.words.close")</a>
+        </div>
+    </div>
+</form>
