--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/admin.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/admin.vm
@@ -26,13 +26,10 @@
         #end
 
         <div class="field-group">
-            <label for="group">$i18n.getText("cpji.admin.fields.group.name")</label>
-            <select class="select" name="group" id="group">
-                <option value=""  #if($action.getSelectedGroup() == "")
-                        selected="" #end>$i18n.getText("cpji.admin.fields.group.everyone")</option>
-                #foreach( $group in $action.getGroups() )
-                    <option value="$group.getName()"  #if($action.getSelectedGroup() == $group.getName())
-                            selected="" #end>$group.getName()</option>
+            <label for="groups">$i18n.getText("cpji.admin.fields.group.name")</label>
+            <select class="hidden" name="groups" id="groups" multiple="multiple">
+                #foreach( $group in $action.groups )
+                    <option value="$group.getName()"  #if($action.isGroupSelected($group)) selected="" #end>$group.getName()</option>
                 #end
             </select>
             <div class="description">$i18n.getText("cpji.admin.fields.group.description")</div>
