--- a/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
+++ b/cpji-jira-plugin/src/main/resources/com/atlassian/cpji/templates/copydetails.vm
@@ -1,3 +1,4 @@
+#* @vtlvariable name="action" type="com.atlassian.cpji.action.CopyDetailsAction" *#
 <html>
 <head>
     <title>Select a new issue type</title>
@@ -84,8 +85,8 @@
                     <input type="submit" value="Next" class="button submit"/>
                 </div>
             </div>
-            <input type="hidden" name="id" value="$action.getId()"/>
-            <input type="hidden" name="atl_token" value="$action.getXsrfToken()"/>
+            <input type="hidden" name="id" value="$action.id"/>
+            <input type="hidden" name="atl_token" value="$action.xsrfToken"/>
             <input type="hidden" name="targetEntityLink" value="$action.targetEntityLink"/>
         </form>
     </div>
